--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -20,15 +20,23 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				max-width: 100%;
 				margin: 0;
 			}
+
 			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				border-radius: 12px;
-				box-shadow: var(--box-shadow);
-			}
+  width: 100%;
+  max-width: 1020px;
+  height: 600px; /* CHIỀU CAO HERO  */
+  margin: 0 auto;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.hero-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Crop hero đẹp */
+  object-position: center; /* Giữ trung tâm */
+  display: block;
+}
 			.prose {
 				width: 65%;
 				max-width: calc(100% - 2em);
