--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,11 +3,17 @@ import { type CollectionEntry, getCollection, render } from 'astro:content';
 import BlogPost from '../../layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({
-		params: { slug: post.id },
-		props: post,
-	}));
+  const posts = await getCollection("blog-vi");
+
+  return posts.map((post) => ({
+    params: {
+      slug: post.id
+        .split("/")
+        .pop()
+        ?.replace(/\.(md|mdx)$/, ""),
+    },
+    props: { post },
+  }));
 }
 type Props = CollectionEntry<'blog'>;
 
