--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,8 +7,9 @@ import FormattedDate from '../../components/FormattedDate.astro';
 import Header from '../../components/Header.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../../consts';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+const posts = (await getCollection('blog'))
+	.filter((p) => !p.data.draft && p.data.date)
+	.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf(),
 );
 ---
 
