--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -101,7 +101,7 @@ const posts = (await getCollection('blog'))
 									)}
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
+										<FormattedDate date={post.data.date} />
 									</p>
 								</a>
 							</li>
